[project]
name = "project_4_cv"
version = "0.1.0"
description = ""
authors = [
    {name = "dbigman",email = "dbigman@gascoindustrial.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_4_cv", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
